Spacing issue in hiring alert

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -640,6 +640,6 @@ p {font-size: 1.06em; color: #44464b; font-family: 'Ideal Sans SSm A', 'Ideal Sa
 }
 
 @media only screen and (min-width: 1200px)   {
-	a#hiring-alert {margin-top: 2.03%; margin-left: 17%;}
+	a#hiring-alert {margin-top: 2.03%; margin-left: 18.1%;}
 
 }
